# NLP-to-Filters

./: .env_sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
config/: settings.py
config/prompts/: concept_extraction.jinja2  value_filling.jinja2
frontend/: filter_configurator.html
prompts/: concept_extraction.jinja2  value_filling.jinja2
scripts/: populate_redis.py  sample_filters.py
src/: app.py
src/api/: app.py  controllers.py
src/api/controllers/: __init__.py  chat.py  health.py
src/core/: models.py  workflow.py
src/infrastructure/: chat_client.py  embedding_client.py  llm_client.py  pii_client.py  redis_client.py
src/models/: domain_models.py
src/services/: chat_service.py  embedding_service.py  graph.py  llm_service.py  nodes.py  pii_service.py  redis_service.py  workflow.py
src/ui/: console_app.py  gradio_app.py
